--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width">
   <title>이미지 로드</title>
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+  <!-- 이미지 로드 채크 플러그인 -->
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <!-- 폰트어썸 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     #content {
