--- a/index.html
+++ b/index.html
@@ -9,31 +9,7 @@
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <!-- 폰트어썸 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-    #content {
-      display: none;
-    }
-    #content img { 
-      width: 100%;
-      height: 25vh;
-      object-fit: cover;
-    }
-    #content.show {
-      display: block
-    }
-    #icon-loding {
-      position: fixed;
-      left: 50%;
-      top: 50%;
-    }
-    #icon-loding .fa {
-      font-size: 48px;
-      display: none;
-    }
-    #icon-loding.show .fa {
-       display: block;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="icon-loding"><i class="fa fa-spinner fa-spin fa-2x"></i></div>
